--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,7 @@ baseURL = "https://blog.aaronbieber.com/"
 languageCode = "en-us"
 title = "The Chronicle"
 theme = "chronicle"
+
+[params]
+disqusShortName = "aaronbieber"
+author = "abieber"
