--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,11 @@ baseURL = "https://blog.aaronbieber.com/"
 languageCode = "en-us"
 title = "The Chronicle"
 theme = "chronicle"
+uglyURLs = true
 
 [params]
-disqusShortName = "aaronbieber"
-author = "abieber"
+  disqusShortName = "aaronbieber"
+  author = "abieber"
+
+[permalinks]
+  posts = "/:year/:month/:day/:title"
